// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`taskSheet ec17-aat-task 1`] = `
Object {
  "description": "Speed Assigned Area Task (AAT)  122.5 km < D < 244.0 km  (Tmin=02:00)",
  "distance": null,
  "maxDistance": 244000,
  "minDistance": 122500,
  "minTime": 7200,
  "turnpoints": Array [
    Object {
      "aatRadial1": null,
      "aatRadial2": null,
      "aatRadius": null,
      "course": null,
      "distance": null,
      "elevation": 114,
      "latitude": 50.847500000000004,
      "longitude": 6.104444444444444,
      "name": "AP2Blausteinsee Mitte",
      "number": "116",
    },
    Object {
      "aatRadial1": 0,
      "aatRadial2": 360,
      "aatRadius": 30000,
      "course": 62,
      "distance": 87300,
      "elevation": 389,
      "latitude": 51.85333333333333,
      "longitude": 7.122777777777777,
      "name": "085Radevormwald Flpl.",
      "number": "085",
    },
    Object {
      "aatRadial1": 0,
      "aatRadial2": 360,
      "aatRadius": 500,
      "course": 244,
      "distance": 93900,
      "elevation": 183,
      "latitude": 50.84722222222222,
      "longitude": 6.102777777777778,
      "name": "055Kronenbrot",
      "number": "055",
    },
    Object {
      "aatRadial1": 78,
      "aatRadial2": 258,
      "aatRadius": 300,
      "course": 168,
      "distance": 1900,
      "elevation": 190,
      "latitude": 50.846944444444446,
      "longitude": 6.103055555555555,
      "name": "ZL-RWY-EDKA",
      "number": "118",
    },
  ],
  "type": "aat",
}
`;

exports[`taskSheet ec17-aat-task2 1`] = `
Object {
  "description": "Speed Assigned Area Task (AAT)  131.2 km < D < 316.4 km Zeitlimit fehlt!",
  "distance": null,
  "maxDistance": 316400,
  "minDistance": 131200,
  "minTime": null,
  "turnpoints": Array [
    Object {
      "aatRadial1": null,
      "aatRadial2": null,
      "aatRadius": null,
      "course": null,
      "distance": null,
      "elevation": 212,
      "latitude": 50.84666666666667,
      "longitude": 6.103333333333333,
      "name": "086Raststaette ACer-Land",
      "number": "086",
    },
    Object {
      "aatRadial1": 0,
      "aatRadial2": 360,
      "aatRadius": 20000,
      "course": 118,
      "distance": 40300,
      "elevation": 208,
      "latitude": 50.84388888888889,
      "longitude": 6.111944444444444,
      "name": "034Euskirchen BAB S",
      "number": "034",
    },
    Object {
      "aatRadial1": 0,
      "aatRadial2": 360,
      "aatRadius": 8000,
      "course": 312,
      "distance": 41900,
      "elevation": 116,
      "latitude": 50.84805555555556,
      "longitude": 6.104444444444444,
      "name": "004Aldenhoven BAB",
      "number": "004",
    },
    Object {
      "aatRadial1": 0,
      "aatRadial2": 360,
      "aatRadius": 20000,
      "course": 58,
      "distance": 64700,
      "elevation": 236,
      "latitude": 51.85333333333333,
      "longitude": 7.1175,
      "name": "098Solingen Kreisfriedhof",
      "number": "098",
    },
    Object {
      "aatRadial1": 0,
      "aatRadial2": 360,
      "aatRadius": 500,
      "course": 237,
      "distance": 73900,
      "elevation": 183,
      "latitude": 50.84722222222222,
      "longitude": 6.102777777777778,
      "name": "055Kronenbrot",
      "number": "055",
    },
    Object {
      "aatRadial1": null,
      "aatRadial2": null,
      "aatRadius": null,
      "course": 168,
      "distance": 1900,
      "elevation": 190,
      "latitude": 50.846944444444446,
      "longitude": 6.103055555555555,
      "name": "ZL-RWY-EDKA",
      "number": "118",
    },
  ],
  "type": "aat",
}
`;

exports[`taskSheet ec17-racing-task 1`] = `
Object {
  "description": "Racing-Task (RT) 302.2 km",
  "distance": 302200,
  "maxDistance": null,
  "minDistance": null,
  "minTime": null,
  "turnpoints": Array [
    Object {
      "aatRadial1": null,
      "aatRadial2": null,
      "aatRadius": null,
      "course": null,
      "distance": null,
      "elevation": 153,
      "latitude": 50.846111111111114,
      "longitude": 6.101666666666667,
      "name": "002Aachen Europaplatz",
      "number": "002",
    },
    Object {
      "aatRadial1": null,
      "aatRadial2": null,
      "aatRadius": null,
      "course": 117,
      "distance": 91000,
      "elevation": 292,
      "latitude": 50.84,
      "longitude": 7.120833333333333,
      "name": "062Maria Laach Abtei",
      "number": "062",
    },
    Object {
      "aatRadial1": null,
      "aatRadial2": null,
      "aatRadius": null,
      "course": 236,
      "distance": 78800,
      "elevation": 424,
      "latitude": 49.83305555555556,
      "longitude": 6.105555555555555,
      "name": "103Utscheid",
      "number": "103",
    },
    Object {
      "aatRadial1": null,
      "aatRadial2": null,
      "aatRadius": null,
      "course": 33,
      "distance": 70000,
      "elevation": 327,
      "latitude": 50.841944444444444,
      "longitude": 6.1147222222222215,
      "name": "031Effelsberg Radiot.",
      "number": "031",
    },
    Object {
      "aatRadial1": null,
      "aatRadial2": null,
      "aatRadius": null,
      "course": 306,
      "distance": 60600,
      "elevation": 183,
      "latitude": 50.84722222222222,
      "longitude": 6.102777777777778,
      "name": "055Kronenbrot",
      "number": "055",
    },
    Object {
      "aatRadial1": null,
      "aatRadial2": null,
      "aatRadius": null,
      "course": 168,
      "distance": 1900,
      "elevation": 190,
      "latitude": 50.846944444444446,
      "longitude": 6.103055555555555,
      "name": "ZL-RWY-EDKA",
      "number": "118",
    },
  ],
  "type": "racing",
}
`;

exports[`taskSheet luesse17-aat 1`] = `
Object {
  "description": "Speed Assigned Area Task (AAT)  120.0 km < D < 218.9 km  (Tmin=01:30)",
  "distance": null,
  "maxDistance": 218900,
  "minDistance": 120000,
  "minTime": 5400,
  "turnpoints": Array [
    Object {
      "aatRadial1": null,
      "aatRadial2": null,
      "aatRadius": null,
      "course": null,
      "distance": null,
      "elevation": 40,
      "latitude": 52.87694444444445,
      "longitude": 11.194722222222222,
      "name": "228Start West",
      "number": "228",
    },
    Object {
      "aatRadial1": 0,
      "aatRadial2": 0,
      "aatRadius": 15000,
      "course": 228,
      "distance": 64800,
      "elevation": 111,
      "latitude": 52.870555555555555,
      "longitude": 10.182777777777778,
      "name": "111Helmstedt Rote",
      "number": "111",
    },
    Object {
      "aatRadial1": 0,
      "aatRadial2": 0,
      "aatRadius": 15000,
      "course": 89,
      "distance": 59800,
      "elevation": 52,
      "latitude": 52.870555555555555,
      "longitude": 11.1975,
      "name": "043Burg",
      "number": "043",
    },
    Object {
      "aatRadial1": null,
      "aatRadial2": null,
      "aatRadius": null,
      "course": 357,
      "distance": 43100,
      "elevation": 55,
      "latitude": 52.87694444444445,
      "longitude": 11.196944444444444,
      "name": "231Stendal Borstel",
      "number": "231",
    },
  ],
  "type": "aat",
}
`;
